# proximal-projection

./: .gitignore  404.html  README.md  bp-obj-plots.csv  bp-res-plots.csv  bp-time-plots.csv  bp-times.tex  bp-viol-plots.csv  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml
.github/workflows/: python-linting.yml
basis_pursuit/: index.html
docs/: basis_pursuit.md  proximal_projection.md
examples/basis_pursuit/: basis_pursuit_experiment.py  bp-obj-plots.csv  bp-plots.fdb_latexmk  bp-plots.fls  bp-plots.tex  bp-res-plots.csv  bp-times.tex  bp-viol-plots.csv  methods.py  stats.py
proximal_projection/: index.html
search/: search_index.json
src/proximal_projection/: proximal_projection.py
