[project]
name = "proximal-projection"
version = "0.1.0"
description = "Implementation of the proximal projection method"
authors = [{name = "Howard Heaton", email = "research@typal.academy"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry]
packages = [{ include = "proximal_projection", from = "src" }]


[tool.poetry.scripts]
basis_pursuit_experiment = "examples.basis_pursuit.basis_pursuit_experiment:run_basis_pursuit_experiment"



[tool.poetry.dependencies]
python = ">=3.9"
pydantic = "^2.10.6"
numpy = "^1.26.4"  # Use the latest stable NumPy version


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^7.1.2"
mypy = "^1.4.0"
pylint = "^3.3.5"


[tool.black]
line-length = 100
target-version = ['py312']


[tool.pylint."MESSAGES CONTROL"]
disable = ["invalid-name"]


[tool.mypy]
files = ["src/"]
disallow_untyped_calls = true
check_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
